Further implemented LoadDB, Negocio.java